Add page state to nav

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <nav>
-            <button>Home</button><button>Menu</button><button>About</button>
+            <button id="homePageBtn">Home</button>
+            <button id="menuPageBtn">Menu</button>
+            <button id="aboutPageBtn">About</button>
         </nav>
     </header>
     <div id="content"></div>
